# boostcamp-mcp

./: .env.example  .gitignore  README.md  package.json  pyproject.toml
.boostcamp/: session.pickle
src/: index.ts
src/boostcamp_mcp/: login.py  server.py
